components/apps/wax100-blog/overlays/development/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wax100-blog-db
spec:
  selector:
    app: wax100-blog-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
