components/apps/wax100-blog/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wax100-blog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.wax100.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wax100-blog
                port:
                  number: 80
